[tool.poetry]
name = "furiosa-video"
version = "0.1.0"
description = ""
authors = ["Shin Hyun <kyaryunha@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^3.0.0"}
boto3 = "^1.29.6"
flask-cors = "^4.0.0"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
flask-sqlalchemy = "^3.1.1"
pymysql = "^1.1.0"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
